--- a/v.0.7.5/src/metachess/README_V.0.7.5
+++ b/v.0.7.5/src/metachess/README_V.0.7.5
@@ -1,5 +1,4 @@
 METACHESS V.0.7.5
-BY JAN
 
 BUG FIXES
 _ working directory under Eclipse (+ added some comments to show how)
@@ -13,9 +12,9 @@ _ divided boards into graphical and non-graphical
 _ moved all boards together in new package "metachess.boards"
 _ added chess AI (known bug : sometimes whitePlaying doesn't change from parent to child, caused by illegal move, check output for notification)
 
-TO DO
+STILL TO DO
 _ automatic first move when white is AI + block pieces while AI plays
-_ fix AI bug (watch for "PLAYER DIDN'T CHANGE" in output, caused by AI trying to play an illegal move)
+_ fix AI bug (watch for "ILLEGAL MOVE" in output)
 _ fix log back-button (do not re-initialize when back to zero)
 _ fix castle
 _ disallow the king to stay in check
@@ -25,7 +24,7 @@ _ generate working jar (fix null pointer exception)
 _ game end notification (you win / you loose)
 _ '?' menu with "about" and 7D² logo (logos are in http://7eventh.free.fr/res/img/logos/)
 _ improve MoveType (to generate valet-like pieces)
-_ MetaChess web page at http://7eventh.free.fr/pro/metachess/
+_ create and upload MetaChess web page at http://7eventh.free.fr/pro/metachess/
 _ add comments / generate javadoc
 _ catch exceptions "properly"
 _ add more fairy pieces, setups and saved games (chess problems, famous chess games between masters, sample games, training, capablanca chess, etc.)
